--- a/.editorconfig
+++ b/.editorconfig
@@ -1,5 +1,4 @@
-# http://editorconfig.org
-
+# Editor configuration, see https://editorconfig.org
 root = true
 
 [*]
@@ -9,6 +8,10 @@ indent_size = 2
 insert_final_newline = true
 trim_trailing_whitespace = true
 
+[*.ts]
+quote_type = single
+
 [*.md]
+max_line_length = off
 insert_final_newline = false
 trim_trailing_whitespace = false
