--- a/package.json
+++ b/package.json
@@ -6,36 +6,48 @@
     "type": "git",
     "url": "https://github.com/WoltersKluwerPL/ng-spin-kit"
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/WoltersKluwerPL/ng-spin-kit/blob/master/LICENSE"
-    }
+  "license": "MIT",
+  "contributors": [
+    "Anders Törnkvist (https://github.com/AndersTornkvist)"
   ],
   "scripts": {
-    "start": "npm run build && concurrently \"tsc -w\" \"lite-server\"",
-    "ngc": "ngc",
-    "build": "rm -rf dist && ngc -p app",
-    "prepublish": "npm run build"
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build ng-spin-kit",
+    "test": "ng test ng-spin-kit",
+    "lint": "ng lint ng-spin-kit"
   },
-  "main": "dist/spinners.js",
-  "typings": "dist/spinners.d.ts",
+  "dependencies": {
+    "@angular/animations": "~11.0.5",
+    "@angular/common": "~11.0.5",
+    "@angular/compiler": "~11.0.5",
+    "@angular/core": "~11.0.5",
+    "@angular/forms": "~11.0.5",
+    "@angular/platform-browser": "~11.0.5",
+    "@angular/platform-browser-dynamic": "~11.0.5",
+    "@angular/router": "~11.0.5",
+    "rxjs": "~6.6.0",
+    "tslib": "^2.0.0",
+    "zone.js": "~0.10.2"
+  },
   "devDependencies": {
-    "@angular/common": "^5.1.1",
-    "@angular/compiler": "^5.1.1",
-    "@angular/compiler-cli": "^5.1.1",
-    "@angular/core": "^5.1.1",
-    "@angular/platform-browser": "^5.1.1",
-    "@angular/platform-browser-dynamic": "^5.1.1",
-    "@types/node": "8.5.1",
-    "concurrently": "3.5.1",
-    "core-js": "2.5.3",
-    "lite-server": "2.3.0",
-    "reflect-metadata": "0.1.10",
-    "rxjs": "5.5.5",
-    "systemjs": "0.20.19",
-    "ts-loader": "3.2.0",
-    "typescript": "2.6.2",
-    "zone.js": "0.8.18"
+    "@angular-devkit/build-angular": "~0.1100.5",
+    "@angular/cli": "~11.0.5",
+    "@angular/compiler-cli": "~11.0.5",
+    "@types/jasmine": "~3.6.0",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.1.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.0.3",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "ng-packagr": "^11.0.0",
+    "protractor": "~7.0.0",
+    "ts-node": "~8.3.0",
+    "tslint": "~6.1.0",
+    "typescript": "~4.0.2"
   }
 }
